[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euler = "0.4.0"
rand = "0.8.4"
pixels = "0.13.0"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
rayon = "1.8.0"
rand_distr = "0.4.3"


